Bug 166200 - The list of open documents/windows is incorrect after one of them is closed (Linux-only)
Summary: The list of open documents/windows is incorrect after one of them is closed (...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.2.2.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-04-15 16:58 UTC by Ivan Guštin
Modified: 2025-05-08 18:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
no repro (507.65 KB, image/png)
2025-05-03 14:33 UTC, fpy
Details
Screenshot with open "Untitled 6" which is missing in Window list (811.01 KB, image/jpeg)
2025-05-05 08:17 UTC, Ivan Guštin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Guštin 2025-04-15 16:58:53 UTC
Description:
The "Window" menu contains a list of windows with open documents. However, when a document/window is closed, the list does not update correctly. It still shows documents/windows that have already been closed, while those that are actually open are missing from the list.

Steps to Reproduce:
1. Open multiple documents.
2. Close one of the opened documents.
3. See Windows list of opened documents/windows.

Actual Results:
List of currently open documents contains file names of already closed documents, and some of currently open documents are not on the list.

Expected Results:
Correct list of actual opened documents/windows after closing any one of them.


Reproducible: Always


User Profile Reset: No

Additional Info:
The bug exists for a while, I don't know from which version exactly.
Comment 1 raal 2025-04-15 19:14:47 UTC
No repro with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dcd3427149c33852428b4198c22f6f858125c294
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Please copy and paste here the contents of your Help - About from your LibreOffice. This allows us to know more about your system.
Comment 2 Ivan Guštin 2025-05-02 10:30:14 UTC
Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hr-HR (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 fpy 2025-05-03 14:32:50 UTC
(In reply to Ivan Guštin from comment #0)
> some of currently open documents are not on the list.

can you make a screenshot of that ?
Comment 4 fpy 2025-05-03 14:33:46 UTC
Created attachment 200642 [details]
no repro
Comment 5 Ivan Guštin 2025-05-05 08:11:54 UTC
It is easy to reproduce:
- run Writer
- open for example up to 6 new untitled documents
- switch for example to document "Untitled 3"
- close current document "Untitled 3"
- open list of open documets in "Window" menu
- document "Untitled 3" is still there, but "Untitled 6" is missing
Comment 6 Ivan Guštin 2025-05-05 08:17:51 UTC
Created attachment 200658 [details]
Screenshot with open "Untitled 6" which is missing in Window list

Screenshot of previously described scenario
Comment 7 Jussi Suominen 2025-05-05 23:16:50 UTC
Thank you for reporting the bug. I can confirm that the bug is present in

Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: fi-FI
Ubuntu package version: 4:25.2.2-0ubuntu0.22.04.1~lo3
Calc: threaded
Comment 8 Buovjaga 2025-05-06 17:02:18 UTC
I can repro on Linux, but not on Windows. Somebody could check with bibisect repos, if this is a new issue.
Comment 9 raal 2025-05-07 06:15:34 UTC
(In reply to Ivan Guštin from comment #5)
> It is easy to reproduce:
> - run Writer
> - open for example up to 6 new untitled documents
> - switch for example to document "Untitled 3"
> - close current document "Untitled 3"
> - open list of open documets in "Window" menu
> - document "Untitled 3" is still there, but "Untitled 6" is missing

This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 49242ff343be06c471a2ca653b7cccf6706a2871 is the first bad commit
commit 49242ff343be06c471a2ca653b7cccf6706a2871
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sun Aug 11 18:20:43 2024 +0200

    source a18b0b4aa56c47cadd0b6d6d1ad5842cf16e9835

171723: speed up menu construction at app startup | https://gerrit.libreoffice.org/c/core/+/171723
Comment 10 Commit Notification 2025-05-08 16:14:48 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15ed00fcef6bbc83b43da2e0c33d0eecba22fd55

tdf#166200 The list of open documents/windows is incorrect

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Ivan Guštin 2025-05-08 16:54:42 UTC
Great, thanks. I will test it and let you know after update.
Comment 12 Commit Notification 2025-05-08 18:41:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/8086fbb3bed5da6125cc9765d613205cc612a734

tdf#166200 The list of open documents/windows is incorrect

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.