tdf#166200 The list of open documents/windows is incorrect

Revert "speed up menu construction at app startup"

This reverts commit a18b0b4aa56c47cadd0b6d6d1ad5842cf16e9835.

Change-Id: Ibfa0fe91fcfacf4a357782fedb48468b711044af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185036
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>