vcl/inc/unx/gtk/gtksalmenu.hxx
@@ -89,7 +89,7 @@ public:
     void                        SetActionGroup( GActionGroup* pActionGroup ) { mpActionGroup = pActionGroup; }
     bool                        IsItemVisible( unsigned nPos );
 
-    void                        NativeSetItemText( unsigned nSection, unsigned nItemPos, const OUString& rText, bool bFireEvent = true );
+    void                        NativeSetItemText( unsigned nSection, unsigned nItemPos, const OUString& rText );
     void                        NativeSetItemIcon( unsigned nSection, unsigned nItemPos, const Image& rImage );
     bool                        NativeSetItemCommand( unsigned nSection,
                                                       unsigned nItemPos,
