vcl/unx/gtk3/gtksalmenu.cxx
@@ -300,23 +300,17 @@ void GtkSalMenu::ImplUpdate(bool bRecurse, bool bRemoveDisabledEntries)
         OString sNativeCommand = GetCommandForItem(pSalMenuItem);
 
         // Force updating of native menu labels.
+        NativeSetItemText( nSection, nItemPos, aText );
+        NativeSetItemIcon( nSection, nItemPos, aImage );
+        NativeSetAccelerator(nSection, nItemPos, nAccelKey, nAccelKey.GetName());
 
         if (!sNativeCommand.isEmpty() && pSalMenuItem->mpSubMenu == nullptr)
         {
-            NativeSetItemText( nSection, nItemPos, aText, false );
-            NativeSetItemIcon( nSection, nItemPos, aImage );
-            NativeSetAccelerator(nSection, nItemPos, nAccelKey, nAccelKey.GetName());
             NativeSetItemCommand(nSection, nItemPos, nId, sNativeCommand.getStr(), itemBits, bChecked, false);
             NativeCheckItem( nSection, nItemPos, itemBits, bChecked );
             NativeSetEnableItem(sNativeCommand, bEnabled);
 
             pNewCommandList = g_list_append(pNewCommandList, g_strdup(sNativeCommand.getStr()));
-        }
-        else
-        {
-            NativeSetItemText( nSection, nItemPos, aText );
-            NativeSetItemIcon( nSection, nItemPos, aImage );
-            NativeSetAccelerator(nSection, nItemPos, nAccelKey, nAccelKey.GetName());
         }
 
         GtkSalMenu* pSubmenu = pSalMenuItem->mpSubMenu;
@@ -1175,7 +1169,7 @@ void GtkSalMenu::NativeSetEnableItem(const OString& sCommand, gboolean bEnable)
         g_lo_action_group_set_action_enabled(pActionGroup, sCommand.getStr(), bEnable);
 }
 
-void GtkSalMenu::NativeSetItemText( unsigned nSection, unsigned nItemPos, const OUString& rText, bool bFireEvent )
+void GtkSalMenu::NativeSetItemText( unsigned nSection, unsigned nItemPos, const OUString& rText )
 {
     SolarMutexGuard aGuard;
     // Escape all underscores so that they don't get interpreted as hotkeys
@@ -1188,7 +1182,7 @@ void GtkSalMenu::NativeSetItemText( unsigned nSection, unsigned nItemPos, const 
     gchar* aLabel = g_lo_menu_get_label_from_item_in_section( G_LO_MENU( mpMenuModel ), nSection, nItemPos );
 
     if ( aLabel == nullptr || g_strcmp0( aLabel, aConvertedText.getStr() ) != 0 )
-        g_lo_menu_set_label_to_item_in_section( G_LO_MENU( mpMenuModel ), nSection, nItemPos, aConvertedText.getStr(), bFireEvent );
+        g_lo_menu_set_label_to_item_in_section( G_LO_MENU( mpMenuModel ), nSection, nItemPos, aConvertedText.getStr() );
 
     if ( aLabel )
         g_free( aLabel );
@@ -1318,9 +1312,7 @@ bool GtkSalMenu::NativeSetItemCommand( unsigned nSection,
             g_free(pLabel);
         }
 
-        // suppress event firing here, we will do so anyway in the g_lo_menu_set_action_and_target_value_to_item_in_section call,
-        // speeds up constructing menus
-        g_lo_menu_set_command_to_item_in_section( pMenu, nSection, nItemPos, aCommand, /*fire_event*/false );
+        g_lo_menu_set_command_to_item_in_section( pMenu, nSection, nItemPos, aCommand );
 
         gchar* aItemCommand = g_strconcat("win.", aCommand, nullptr );
 
